--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             repeat="indefinite"
           >
           </a-animation>
+          <!--Blue box-->
           <a-box position="0 1 0" material="color: blue;"> </a-box>
         </a-entity>
       </a-marker>
